Fixed Page Layouts that were broken Implemented Working Search Bar (Refresh and Keeping value after post thanks tip from stackoverflow) Fixed Active NavBar Link Update Models to help with layout

--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    ViewData["Active"] = "Doctors";
 }
 
 <div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
