--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Delete.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Delete.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Delete";
+    ViewData["Active"] = "Nurses";
+
 }
 
 
@@ -78,6 +80,5 @@
             <input type="submit" value="Delete" class="btn btn-danger" />
             <a asp-action="Index" class="btn btn-info">Back to List</a>
         </form>
-        </div>
         <br />
     </center>
