--- a/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Edit.cshtml
@@ -2,38 +2,66 @@
 
 @{
     ViewData["Title"] = "Edit";
+    ViewData["Active"] = "DoctorShifts";
 }
 
-<h2>Edit</h2>
 
-<h4>DoctorShifts</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="DoctorShiftID" />
-            <div class="form-group">
-                <label asp-for="DoctorID" class="control-label"></label>
-                <select asp-for="DoctorID" class="form-control" asp-items="ViewBag.DoctorID"></select>
-                <span asp-validation-for="DoctorID" class="text-danger"></span>
+<div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
+    <div class="overlay"></div>
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
+                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Assigned Shifts - @ViewData["Title"]</span></p>
+                <h1 class="mb-3 bread">Assigned Shifts - @ViewData["Title"]</h1>
             </div>
-            <div class="form-group">
-                <label asp-for="ShiftID" class="control-label"></label>
-                <select asp-for="ShiftID" class="form-control" asp-items="ViewBag.ShiftID"></select>
-                <span asp-validation-for="ShiftID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+<br />
+<center>
+    <hr />
+    <div>
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="DoctorShiftID" />
+                <table class="table-borderless">
+                    <tr>
+                        <td style="min-width:8em;text-align:justify">
+                            <label asp-for="DoctorID" class="control-label"></label>
+                            <label style="margin-top:10px">: </label>
+                        </td>
+                        <td style="text-align:justify">
+                            <select asp-for="DoctorID" class="form-control" asp-items="ViewBag.DoctorID" style="text-align:center;width:30em;"></select>
+                        </td>
+                        <td>
+                            <span asp-validation-for="DoctorID" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:8em;text-align:justify">
+                            <label asp-for="ShiftID" class="control-label"></label>
+                            <label style="margin-top:10px">: </label>
+                        </td>
+                        <td style="text-align:justify">
+                            <select asp-for="ShiftID" class="form-control" asp-items="ViewBag.ShiftID" style="text-align:center;width:30em;"></select>
+                        </td>
+                        <td>
+                            <span asp-validation-for="ShiftID" class="text-danger"></span>
+                        </td>
+                    </tr>
+                </table>
+                <br />
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-info">Back to List</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br />
+</center>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
