--- a/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Index.cshtml
@@ -1,41 +1,77 @@
 ﻿@model IEnumerable<HospitalScheduling.Models.DoctorShifts>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List";
+    ViewData["Active"] = "DoctorShifts";
 }
 
-<h2>Index</h2>
+<div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
+    <div class="overlay"></div>
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
+                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Assigned Shifts - @ViewData["Title"]</span></p>
+                <h1 class="mb-3 bread">Assigned Shifts - @ViewData["Title"]</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<br />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Doctor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Shift)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Doctor.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Shift.ShiftID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DoctorShiftID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DoctorShiftID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DoctorShiftID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<form asp-action="Index">
+    <div style="min-width:100%">
+        <a asp-action="Create" class="btn btn-primary" style="margin-left:15px">Create New</a>
+
+        @{
+            string search = "";
+            try
+            {
+                search = string.IsNullOrEmpty(Context.Request.Form["search"].ToString()) ? string.Empty : Context.Request.Form["search"].ToString();
+
+            }
+            catch (Exception ex)
+            {
+
+            }
+            finally
+            {
+                <input type="search" id="searchbox" autofocus oninput="this.form.submit();" onfocus="this.value = '@(search)'" onchange="this.form.submit()" name="search" style="position:absolute;right:0; margin-right:50px; border: 2px solid #167ce9;font-size: 1.2em;text-align: center;border-radius: 20px;background-color:transparent;" />
+            }
+        }
+        <input type="submit" class="icon-search fa-7x" value="&#xf002;" style="font-family: FontAwesome;height:35px;width:35px; position:absolute;right:0;background-color:transparent;margin-right:5px;margin-top:1px; border: 2px solid #167ce9;font-size: 1.2em;text-align: center;border-radius: 20px;" />
+    </div>
+</form>
+</br>
+<center>
+    <table class="table" style="margin-left:15px;max-width:98.5% !important;">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Doctor.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Shift.Name)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Doctor.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Shift.Name)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.DoctorShiftID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.DoctorShiftID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.DoctorShiftID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    <br />
+</center>
