--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    ViewData["Active"] = "Doctors";
 }
 
 
@@ -31,7 +32,7 @@
                             </label>
                             <label style="margin-top:10px">: </label>
                         </td>
-                        <td>
+                        <td style="text-align:justify">
                             <input asp-for="Name" class="form-control" placeholder="Insert a name" style="text-align:center;width:30em;" />
                         </td>
                         <td>
@@ -43,7 +44,7 @@
                             <label asp-for="Email" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
-                        <td>
+                        <td style="text-align:justify">
                             <input asp-for="Email" class="form-control" placeholder="Insert an email" style="text-align:center" />
                         </td>
                         <td>
@@ -55,7 +56,7 @@
                             <label asp-for="Phone" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
-                        <td>
+                        <td style="text-align:justify">
                             <input asp-for="Phone" class="form-control" placeholder="Insert a phone number" style="text-align:center" />
                         </td>
                         <td>
@@ -67,7 +68,7 @@
                             <label asp-for="Birthday" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
-                        <td>
+                        <td style="text-align:justify">
                             <input asp-for="Birthday" class="form-control" placeholder="Insert a birth date" style="text-align:center" />
                         </td>
                         <td>
@@ -79,7 +80,7 @@
                             <label asp-for="Speciality" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
-                        <td>
+                        <td style="text-align:justify">
                             <input asp-for="Speciality" class="form-control" placeholder="Insert a birth date" style="text-align:center" />
                         </td>
                         <td>
@@ -91,7 +92,7 @@
                             <label asp-for="Address" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
-                        <td>
+                        <td style="text-align:justify">
                             <input asp-for="Address" class="form-control" placeholder="Insert an address" style="text-align:center;" />
                         </td>
                         <td>
