--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Details.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Details";
+    ViewData["Active"] = "Nurses";
+
 }
 
 <div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
