--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_LoginPartial.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_LoginPartial.cshtml
@@ -19,7 +19,13 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a></li>
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Login</a></li>
+
+        <li @{ if ((ViewData["Active"] == "Register")) { @: class="nav-item active"
+            } else { @: class="nav-item"
+            }}><a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a></li>
+
+        <li @{ if ((ViewData["Active"] == "Login")) { @: class="nav-item active"
+            } else { @: class="nav-item"
+            }}><a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Login</a></li>
     </ul>
 }
