--- a/HospitalScheduling/HospitalScheduling/Views/Shifts/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shifts/Create.cshtml
@@ -2,52 +2,101 @@
 
 @{
     ViewData["Title"] = "Create";
+    ViewData["Active"] = "Shifts";
+
 }
 
-<h2>Create</h2>
-
-<h4>Shift</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
+    <div class="overlay"></div>
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
+                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Shifts - @ViewData["Title"]</span></p>
+                <h1 class="mb-3 bread">Shifts - @ViewData["Title"]</h1>
             </div>
-            <div class="form-group">
-                <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
-                <span asp-validation-for="StartDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DurationMinutes" class="control-label"></label>
-                <input asp-for="DurationMinutes" class="form-control" />
-                <span asp-validation-for="DurationMinutes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DurationSeconds" class="control-label"></label>
-                <input asp-for="DurationSeconds" class="form-control" />
-                <span asp-validation-for="DurationSeconds" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DurationHours" class="control-label"></label>
-                <input asp-for="DurationHours" class="form-control" />
-                <span asp-validation-for="DurationHours" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+<br />
+<hr />
+<center>
+    <div>
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <table class="table-borderless">
+                    <tr>
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="Name" class="control-label" style="margin-top:10px">
+                            </label>
+                            <label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="Name" class="form-control" style="text-align:center;width:30em;" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="StartDate" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="StartDate" class="form-control" style="text-align:center" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="StartDate" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="DurationHours" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="DurationHours" class="form-control" style="text-align:center" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="DurationHours" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="DurationMinutes" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="DurationMinutes" class="form-control" style="text-align:center" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="DurationMinutes" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:8em;text-align:justify">
+                            <label asp-for="DurationSeconds" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="DurationSeconds" class="form-control" style="text-align:center" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="DurationSeconds" class="text-danger"></span>
+                        </td>
+                    </tr>
+                </table>
+                <br />
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-info">Back to List</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br />
+</center>
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
